--- a/package.json
+++ b/package.json
@@ -2,44 +2,44 @@
   "name": "pjchender-webpack-template",
   "version": "0.0.7",
   "description": "",
+  "keywords": [],
+  "license": "ISC",
+  "author": "PJCHENder",
   "main": "index.js",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development npx webpack --mode development",
     "build:prod": "cross-env NODE_ENV=production npx webpack --mode production",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server --color --watch"
+    "start": "webpack-dev-server --color --watch",
+    "watch": "webpack --watch"
   },
-  "keywords": [],
-  "author": "PJCHENder",
-  "license": "ISC",
+  "dependencies": {
+    "cross-env": "^7.0.2"
+  },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/runtime-corejs3": "^7.9.6",
-    "autoprefixer": "^9.7.6",
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/runtime-corejs3": "^7.11.2",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.5.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^4.2.1",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
+    "mini-css-extract-plugin": "^0.10.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
-  },
-  "dependencies": {
-    "cross-env": "^7.0.2"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.1"
   }
 }
